<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.SavChat.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SAV chat"
            android:id="@+id/textView"
            android:paddingBottom="100dp"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/user"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pwd"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_5dp"

            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnLogin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/btnReg"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" 
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>